# gdm

./: README.md  TEST-FILE.md  pyproject.toml
src/: __main__.py
src/commands/install/: __init__.py
